<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Aplicacio4</string>
    <string name="app_title">Aplicación</string>
    <string name="play">Jugar</string>
    <string name="configure">Configurar</string>
    <string name="about">Acerca de</string>
    <string name="exit">Salir</string>
    <string name="text_acercade">Esta aplicacion ha sido desarrollada como ejemplo en el modulo de Diseño de Interficies Web para
        demostrar cómo se pueden lanzar nuevas actividades desde la actividad principal</string>
    <string name="menuacercade">Acerca de...</string>
    <string name="menuconfiguracio">Configuracion</string>
    <string name="menucercar">Buscar</string>
    <string name="pa_key">preferencies_principal</string>
    <string name="pa1_key">musica</string>
    <string name="pa1_title">Reproducir música</string>
    <string name="pa1_summary">Se reproduce música de fondo</string>
    <string name="pa2_key">graficos</string>
    <string name="pa2_title">Tipo de gràficos</string>
    <string name="pa2_summary">Se escoge la representación de gràficos</string>
    <string name="pa3_key">fragmentos</string>
    <string name="pa3_title">Número de fragmentos</string>
    <string name="pa3_summary">En cuantos trozos se divide un asteroide (%1$s)</string>
    <string name="pa3_error1">Tiene que ser un número</string>
    <string name="pa3_error2">Màximo de fragmentos 9</string>
    <string name="pc1_title">Modo multijugador</string>
    <string name="pa4_key">modo_multijugador</string>
    <string name="pa4_title">Activar modo multijugador</string>
    <string name="pa4_summary">Activar modo multijugador en el juego</string>
    <string name="pa5_key">numero_jugadores</string>
    <string name="pa5_title">Màximo de jugadores</string>
    <string name="pa5_summary">Número màximo de jugadores en una partida</string>
    <string name="pa6_key">tipo_conexion</string>
    <string name="pa6_title">Tipo de conexión</string>
    <string name="pa6_summary">Se escoge el tipo de conexión</string>
    <string name="other_text">Altre text</string>
</resources>
