<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/pa_key">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pa1_key"
        android:title= "@string/pa1_title"
        android:summary="@string/pa1_summary"/>

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/tipusGrafics"
        android:entryValues="@array/tipusGraficsValors"
        android:key="@string/pa2_key"
        android:title="@string/pa2_title"
        android:summary="@string/pa2_summary"/>
    <EditTextPreference
        android:defaultValue="3"
        android:key="@string/pa3_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pa3_title"
        android:summary="@string/pa3_summary"/>
    <PreferenceCategory
        android:title="@string/pc1_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pa4_key"
            android:summary="@string/pa4_summary"
            android:title="@string/pa4_title"></CheckBoxPreference>
        <EditTextPreference
            android:key="@string/pa5_key"
            android:title="@string/pa5_title"
            android:summary="@string/pa5_summary"
            android:inputType="number"
            android:singleLine="true">
        </EditTextPreference>
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/tipusConexio"
            android:entryValues="@array/tipusConexioValors"
            android:key="@string/pa6_key"
            android:title="@string/pa6_title"
            android:summary="@string/pa6_summary">
        </ListPreference>
    </PreferenceCategory>
</PreferenceScreen>